[package]
name = "maxgraph-common"
version = "0.1.0"
authors = ["勤远 <wubin.cwb@alibaba-inc.com>"]
build = "build.rs"

[dependencies]
serde_json = "1.0"
protobuf = { version = "~2.0", features = ["with-bytes"] }
pnet = "0.27.0"
log = "0.3"
log4rs = "0.8.0"
serde = "1.0.72"
serde_yaml = "0.7"
serde-value = "=0.5.2"
serde_derive = "1.0.72"
regex = "1"
byteorder = "1"
futures = "0.1.20"
grpcio = "=0.4.1"
grpcio-sys = { version = "0.4.7", features = ["openssl-vendored"] }
zookeeper = { git = "https://github.com/bonifaido/rust-zookeeper.git", rev = "fd222dd" }

[target.'cfg(target_os = "linux")'.dependencies]
psutil = "=1.1.1"


[build-dependencies]
chrono = "0.3"
protoc-grpcio = "0.3.0"
remove_dir_all = "=0.5.1"
