[package]
name = "maxgraph-common"
version = "0.1.0"
authors = ["勤远 <wubin.cwb@alibaba-inc.com>"]
build = "build.rs"

[dependencies]
serde_json = "1.0"
protobuf = { version = "2.27", features = ["with-bytes"] }
pnet = "0.27.0"
log = "0.3"
log4rs = "0.8.0"
serde = "1.0.72"
serde_yaml = "0.8.4"
serde-value = "=0.5.2"
serde_derive = "1.0.72"
regex = "1"
byteorder = "1"
grpcio = "0.10"
futures = "0.3"
grpcio-sys = { version = "0.10", features = ["openssl-vendored"] }

[target.'cfg(target_os = "linux")'.dependencies]
psutil = "=1.1.1"


[build-dependencies]
chrono = "0.3"
protoc-grpcio = "3.0"
remove_dir_all = "=0.5.1"
