[package]
name = "graph_index"
version = "0.1.0"
edition = "2021"

[dependencies]
dyn_type = { path = "../../interactive_engine/executor/common/dyn_type" }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
chrono = "0.4"
itertools = "0.9"
lazy_static = "1.3.0"
log = "0.4"
crossbeam-utils = "0.6"

[lib]
name = "graph_index"
path = "src/lib.rs"
