[package]
name = "gaia_gs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
maxgraph-store = {path = "../../interactive_engine/src/executor/store"}
gremlin_core = {path="../gaia/gremlin/gremlin_core"}
dyn_type = { path = "../gaia/dyn_type" }
structopt = "0.2"
tokio = { version = "1.0", features = ["macros", "sync"] }
pegasus = { path = "../gaia/pegasus/pegasus" }
pegasus_server = { path = "../gaia/pegasus/server" }
pegasus_common = { path = "../gaia/pegasus/common" }