[package]
name = "graph_store"
version = "0.2.0"
edition = "2018"

[features]
jemalloc = ["jemallocator"]

[dependencies]
abomonation = "0.7.3"
abomonation_derive = "0.5"
bincode = "1.0.1"
clap = "2.32.0"
csv = "1.1"
chrono = "0.4"
env_logger = "0.7.1"
lazy_static = "1.1.1"
log = "0.4"
indexmap = { version = "1.3", features = ["serde-1"] }
itertools = "0.9"
jemallocator = { version = "0.3.0", optional = true }
dyn_type = { path = "../dyn_type" }
pegasus_common = { path = "../engine/pegasus/common" }
petgraph = { version = "0.5.0", features = ["serde-1"] }
rand = "0.5.5"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
tempdir = "0.3.7"
timely = "0.10"
walkdir = "2"

[profile.release]
lto = true
panic = "abort"
